Fixed sticky z-index in themes

--- a/themes/default/default/addons/sticky.less
+++ b/themes/default/default/addons/sticky.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@notify-z-index:                                (@global-z-index - 20);
+@sticky-z-index:                                (@global-z-index - 20);
 
 
 // Miscellaneous
